# Eximg

./: .gitignore  README.md  pubspec.yaml
android/: .gitignore  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/eximg/: MainActivity.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/gradle/wrapper/: gradle-wrapper.properties
ios/: .gitignore  Podfile
ios/Flutter/: AppFrameworkInfo.plist
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/Runner/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
lib/: main.dart
src/controllers/: MainController.h
src/models/: Photo.cpp  Photo.h
src/views/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
tools/: generate_app_icons.py
